--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Kevin Barroga, Xriva Oneebtn
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
-theme: cayman
+theme: jekyll-theme-cayman
